<resources>
    <string name="app_name">Medicinal_Plants</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Лекарственные растения</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="action_author">Об авторе</string>
    <string name="management_content">Управление контентом</string>
    <string name="menu_medicinal_plants">Лекарственные растения</string>
    <string name="menu_ills">Недуги и хвори</string>
    <string name="menu_identifier">Атлас-определитель</string>
    <string name="menu_recipes">Рецепты приготовления</string>
    <string name="menu_collection_storage">Сбор и хранение</string>
    <string name="menu_advices">Полезные советы и статьи</string>
    <string name="about_author">Gospodin_DG… \n
                                В миру - Горюнов Денис Сергеевич! </string>
    <string name="start_button_logo">Start Application!</string>
    <string name="text_settings">Настройки текста</string>
    <string name="theme_settings">Настройки темы</string>
    <string name="color_settings">Настройки цвета</string>
    <string name="text_size_settings">Размер текста</string>
    <string name="text_font_settings">Шрифт текста</string>
    <string name="text_style_settings">Начертание текста</string>
    <string name="text_color_settings">Цвет текста</string>
    <string name="actionbar_color_settings">Цвет заголовка страницы с контентом</string>
    <string name="background_color_settings">Цвет фона страницы с контентом</string>
    <string name="medicinal_plants_0">Ало́э (лат. Áloë) — род суккулентных растений семейства Асфоделовые (Asphodelaceae) подсемейства Асфоделовые
        (Asphodeloideae), содержащий более 550 видов[3], распространённых в Африке и на Аравийском полуострове. Ранее род Алоэ относили к семействам
        Алоевые (Aloaceae) и Ксанторреевые (Xanthorrhoeaceae).
        Родовое название алоэ восходит к греч. ἀλόη, которое выводится из арабского (ألوة / альва) или древнееврейского (אהל / ахал, часто упоминается в тексте Библии[4][5]). Из греческого слово заимствовано в латинский язык в форме aloë.

        Более точное написание названия — Aloë, где буква ë — не русская «ё», а латинская e со знаком диерезиса, означающая, что в данном случае сочетание oe произносится как два раздельных звука («оэ»).

        В качестве общеупотребительного русского названия некоторых видов рода Алоэ используется слово «столетник»[6].

        Род Алоэ объединяет многолетние листовые, травянистые, кустарниковые или древовидные ксерофиты и суккуленты.

        Короткий стебель (или ствол) усажен толстыми мясистыми мечевидными листьями, собранными в густые розетки и расположенными в них по спирали. У некоторых видов листья достигают 60 см длины[7]. Края листьев могут быть гладкими или зубчатыми, усаженными по краю острыми шипами или мягкими ресничками. Листья могут накапливать большое количество воды, значительно увеличиваясь в размерах. Листья закрывают поры, что предупреждает испарение воды при недостаточном ее поступлении извне. Мякоть листа разделена на характерные ячейки, сохраняющие запасы влаги во время засухи. При длительной засухе визуально уменьшается размер листьев за счет израсходования резерва влаги. Также в неблагоприятных условиях растение сбрасывает нижние листья с целью сохранить жизнь.

        Цветки небольшие, трубчатые, белые, красные, жёлтые или оранжевые, расположенные на длинном цветоносе в верхушечной многоцветковой кисти.
        Растения рода Алоэ происходят из аридных областей Южной и тропической Африки, Мадагаскара и Аравийского полуострова[8].

        Алоэ в основном произрастает в тёплом и сухом климате, и неудивительно, что многие люди ошибочно принимают его за кактус.

        Алоэ может существовать в условиях, когда другие растения вянут и умирают. Это позволило алоэ пережить суровые изменения в климате нашей планеты и дожить до наших времён. В экстремальных ситуациях это растение закрывает устьица листьев, удерживая влагу внутри листа. В листьях алоэ создаётся довольно большой запас влаги.

        Система классификации APG II (2003) относила род алоэ к семейству Асфоделовые. Пришедшая ей на смену Система классификации APG III (2009) включила асфоделовые в состав семейства Ксанторреевые (Xanthorrhoeaceae) в качестве подсемейства, Система классификации APG IV (2016) вернула род в семейство асфоделовых.

        В традиционной систематике род выделяли в своё собственное семейство Aloaceae (Алоевые, или Алойные), а иногда причисляли к семейству Лилейные. Близкими родственниками алоэ являются роды Гастерия, Хавортия и Книпхофия, имеющие одинаковый метод роста, часто в быту эти роды тоже называют алоэ. Иногда «американским алоэ» называют агаву американскую (Agave americana), хотя оно относится совсем к другому семейству — Агавовые.

        В листьях и стебле алоэ содержится аллантоин, натуральные антиоксиданты в форме витаминов B комплекса, витаминов C и E, а также бета-каротин, который в организме превращается в витамин А.

        Алоэ древовидное и алоэ настоящее — распространённые комнатные растения.

        Лечебные свойства алоэ, судя по сохранившимся письменным источникам, были известны уже более трёх тысяч лет назад[9].

        Различные препараты алоэ применяют при заболеваниях желудочно-кишечного тракта, для лечения гастритов, энтероколитов, гастроэнтеритов, язвенной болезни желудка и двенадцатиперстной кишки, а также при бронхиальной астме, туберкулёзе лёгких и гипохромной анемии.

        Упаренный сок некоторых видов алоэ называется сабур и применяется в качестве слабительного и желчегонного средства. В тропических странах сок получается путём самопроизвольного его истечения из срезанных листьев. В других странах сок из листьев выжимают при помощи прессов и затем выпаривают досуха. Государственная фармакопея СССР допускала к употреблению сорта сабура — капский и из Кюрасао; первый имел вид стекловидных, блестящих, по краям просвечивающих кусков с раковистым изломом; второй состоял из матовых, непросвечивающих кусков с зернистым изломом. Сабур в дозах 0,5—1 г употреблялся как слабительное; в дозах 0,05—0,2 г — для повышения пищеварительной деятельности[7]. Сильно разбавленный или смешанный с соком какого-либо фрукта, он пригоден для питья[10].

        В глазной практике алоэ используют для лечения блефарита, конъюнктивита, кератита, помутнения стекловидного тела, прогрессирующей близорукости.

        Офтальмолог академик Владимир Филатов обнаружил усиление действия экстрактов из листьев алоэ после «биостимуляции», которая состоит в выдерживании срезанных листьев в прохладном влажном месте. При этом в листьях запускается синтез биологически активных веществ. В народной медицине экстракт алоэ в виде капель используют для лечения конъюнктивита, при воспалении верхнего века. Рекомендуется рассматривать экстракт алоэ в первую очередь как биологически активную добавку, а не как сертифицированный лекарственный препарат.[11]

        Кроме того, для лечения ожогов, длительно незаживающих ран и язв, при лучевых поражениях кожи, воспалительных заболеваниях полости рта, для регулирования менструации.[источник не указан 1696 дней]

        Свежий сок в народной медицине наружно используется для заживления ран, внутрь — при туберкулёзе[7].

        Исследования не получили доказательств эффективности использования алоэ для заживления ран[12].

        Сок алоэ может вызывать отравление. Среди симптомов следует отметить: воспаление кишок, тенезмы, понос (иногда с кровью и отделением плёнок), иногда геморрагический нефрит; при беременности возможен выкидыш[13].

        Американские специалисты Национальной токсикологической программы (National Toxicology Program, NTP) провели исследования, во время которого подопытным крысам и мышам на протяжении двух лет давали высокие дозы экстракта растения Aloe barbadensis. Также грызунов поили водой, содержащей 1,5 процента экстракта алоэ по массе. По окончании эксперимента учёные обнаружили в толстом кишечнике крыс как доброкачественные, так и злокачественные новообразования. Опухоли развились у 74 процентов самцов и у 39 процентов самок крыс. У мышей не наблюдалось канцерогенного эффекта от орального употребления алоэ. Следует уточнить, что для исследования крысам давали целый лист алоэ настоящего, вместе с кожурой, которая содержит вещество алоин, употребление которого в больших дозах является канцерогенным, то есть может вызвать рак. Препараты для местного применения по-прежнему считаются безопасными.

        Русский путешественник Авраам Сергеевич Норов сообщал[14]:

        Алоэ приносит большую пользу жителям Африки, Индии и Америки; они строят из тростниковых стеблей онаго шалаши и делают стрелы. Они также извлекают из него нити, из которых ткут паруса.

    </string>
    <string name="medicinal_plants_1"> Боярышник </string>
    <string name="medicinal_plants_2"> Горец птичий </string>
    <string name="medicinal_plants_3"> Душица </string>
    <string name="medicinal_plants_4"> Ежевика </string>
    <string name="medicinal_plants_5"> Зверобой </string>
    <string name="medicinal_plants_6"> Земляника </string>
    <string name="medicinal_plants_7"> Имбирь </string>
    <string name="medicinal_plants_8"> Календула </string>
    <string name="medicinal_plants_9"> Кипрей </string>
    <string name="medicinal_plants_10"> Клевер </string>
    <string name="medicinal_plants_11"> Крыжовник </string>
    <string name="medicinal_plants_12"> Левзея </string>
    <string name="medicinal_plants_13"> Малина </string>
    <string name="medicinal_plants_14"> Мелисса </string>
    <string name="medicinal_plants_15"> Можжевельник </string>
    <string name="medicinal_plants_16"> Мята </string>
    <string name="medicinal_plants_17"> Облепиха </string>
    <string name="medicinal_plants_18"> Подорожник </string>
    <string name="medicinal_plants_19"> Полынь </string>
    <string name="medicinal_plants_20"> Ромашка </string>
    <string name="medicinal_plants_21"> Рябина </string>
    <string name="medicinal_plants_22"> Смородина </string>
    <string name="medicinal_plants_23"> Тимьян </string>
    <string name="medicinal_plants_24"> Тысячелистник </string>
    <string name="medicinal_plants_25"> Шалфей </string>
    <string name="medicinal_plants_26"> Шиповник </string>
    <string name="ills_0"> Болезни Сердечно-сосудистой системы </string>
    <string name="ills_1"> Урология </string>
    <string name="ills_2"> Неврология </string>
    <string name="ills_3"> Травматология </string>
    <string name="ills_4"> Стоматология </string>
    <string name="ills_5"> Болезни ЛОР-органов </string>
    <string name="ills_6"> Болезни органов ЖКТ </string>
    <string name="ills_7"> Эндокринная система </string>
    <string name="ills_8"> Ортопедия </string>
    <string name="identifier_0"> По плодам </string>
    <string name="identifier_1"> По соцветиям </string>
    <string name="identifier_2"> По корням </string>
    <string name="identifier_3"> По вегетативным частям </string>
    <string name="identifier_4"> По другим признакам (физические, химические и др.) </string>
    <string name="recipes_0"> Настойки </string>
    <string name="recipes_1"> Отвары </string>
    <string name="recipes_2"> Настои </string>
    <string name="recipes_3"> Салаты </string>
    <string name="recipes_4"> Натуральное потребление </string>
    <string name="collection_storage_0"> Ареалы произрастания </string>
    <string name="med_plants_name">Название растения</string>
    <string name="med_plants_desc">Описание растения</string>
    <string name="ills_treat">Лечение болезней</string>
    <string name="med_plants_save_btn">Сохранить</string>
    <string name="med_plants_update_btn">Найти/Редактировать</string>
    <string name="med_plants_delete_btn">Удалить</string>
</resources>