<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_medicinal_plants"

            android:title="@string/menu_medicinal_plants" />
        <item
            android:id="@+id/nav_ills"

            android:title="@string/menu_ills" />
        <item
            android:id="@+id/nav_identifier"

            android:title="@string/menu_identifier" />
    </group>
    <item android:title="Разное">
        <menu>
            <item
                android:id="@+id/nav_recipes"

                android:title="@string/menu_recipes" />
            <item
                android:id="@+id/nav_collection_storage"

                android:title="@string/menu_collection_storage" />
            <item
                android:id="@+id/nav_advices"

                android:title="@string/menu_advices" />
        </menu>
    </item>
</menu>