<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/text_settings">
        <ListPreference
            android:defaultValue="15"
            android:entries="@array/array_text_size_settings"
            android:entryValues="@array/array_text_size_settings"
            android:key="text_size_settings"
            android:title="@string/text_size_settings" />
        <ListPreference
            android:defaultValue="Pangolin"
            android:entries="@array/array_text_font_settings"
            android:entryValues="@array/array_text_font_settings"
            android:key="text_font_settings"
            android:title="@string/text_font_settings" />
        <ListPreference
            android:defaultValue="Обычный"
            android:entries="@array/array_text_style_settings"
            android:entryValues="@array/array_text_style_settings"
            android:key="text_style_settings"
            android:title="@string/text_style_settings" />
        <ListPreference
            android:defaultValue="Черный"
            android:entries="@array/array_text_color_settings"
            android:entryValues="@array/array_text_color_settings"
            android:key="text_color_settings"
            android:title="@string/text_color_settings" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/color_settings">

        <ListPreference
            android:defaultValue="Белый"
            android:entries="@array/array_background_color_settings"
            android:entryValues="@array/array_background_color_settings"
            android:key="background_color_settings"
            android:title="@string/background_color_settings" />
        <ListPreference
            android:defaultValue="Стандартный"
            android:entries="@array/array_actionbar_color_settings"
            android:entryValues="@array/array_actionbar_color_settings"
            android:key="actionbar_color_settings"
            android:title="@string/actionbar_color_settings" />
    </PreferenceCategory>
</PreferenceScreen>