<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/med_plants_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/menu_medicinal_plants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ills_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/menu_ills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/med_plants_btn" />

    <Button
        android:id="@+id/recipes_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/menu_recipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ills_btn" />

    <Button
        android:id="@+id/collection_storage_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/menu_collection_storage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipes_btn" />

    <Button
        android:id="@+id/advices_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/menu_advices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collection_storage_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>